--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "qr-dispatch-system:build",
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "qr-dispatch-system:build:production"
@@ -77,10 +81,6 @@
             "development": {
               "browserTarget": "qr-dispatch-system:build:development"
             }
-          },
-          "options": {
-            "browserTarget": "my-app:build",
-            "proxyConfig": "proxy.conf.json"
           },
           "defaultConfiguration": "development"
         },
